# openauc-io

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
development-log/: 0001-project-foundation.md  0002-canonical-data-model.md  0003-generic-delimited-parser.md
docs/: api.md
docs/concepts/: README.md  data-model.md  missing-and-unknown-values.md  optical-systems.md  units.md
docs/decisions/: ADR-0001-python-package-architecture.md  ADR-0002-canonical-data-model.md  ADR-0003-aucx-container-format.md  ADR-0004-parser-plugin-registry.md
docs/formats/: README.md  generic-delimited.md  manifest-v1.md  parser-detection.md
examples/: README.md
schemas/: README.md  generic-manifest-v1.schema.json
src/openauc/: __init__.py  api.py  cli.py  exceptions.py
src/openauc/formats/: __init__.py  base.py  generic_delimited.py  loader.py  manifest.py  registry.py
src/openauc/models/: __init__.py  enums.py  experiment.py  instrument.py  metadata.py  observations.py  provenance.py  sample.py  scan.py  validation.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/fixtures/: README.md
tests/fixtures/generic_delimited/ambiguous_manifest/: manifest.json  manifest.yaml
tests/fixtures/generic_delimited/conflict/: manifest.json  scans.csv
tests/fixtures/generic_delimited/detect_long/: manifest.json  scans.csv
tests/fixtures/generic_delimited/long_csv/: manifest.json  scans.csv
tests/fixtures/generic_delimited/long_tsv/: manifest.yaml  scans.tsv
tests/fixtures/generic_delimited/malformed_duplicate/: manifest.json  scans.csv
tests/fixtures/generic_delimited/malformed_missing_column/: manifest.json  (+1 more)
tests/integration/: test_generic_delimited.py  test_ingestion_edges.py
tests/unit/: test_manifest.py  test_metadata_values.py  test_model_edges.py  test_model_validation.py  test_models_complete.py  test_models_minimal.py  test_observations.py  test_package.py  test_registry.py  test_schema_consistency.py
(+11 files in other folders)
