[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openauc"
description = "Import, validate, standardise, visualise and archive analytical ultracentrifugation data."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Ron Finn" }]
keywords = [
    "analytical ultracentrifugation",
    "AUC",
    "scientific data",
    "data archiving",
    "sedimentation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.7,<3",
    "numpy>=1.26,<3",
    "xarray>=2024.3",
    "pandas>=2.2",
    "pyyaml>=6",
    "matplotlib>=3.8",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/ronfinn/openauc-io"
Repository = "https://github.com/ronfinn/openauc-io"
Issues = "https://github.com/ronfinn/openauc-io/issues"

[project.scripts]
openauc = "openauc.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.16.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6",
]

[tool.hatch.version]
path = "src/openauc/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openauc"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib --cov=openauc --cov-report=term-missing"

[tool.coverage.run]
source = ["openauc"]
branch = true
